# monty

./: .codacy.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  appveyor.yml  benchmark_monty.py  circle.yml  fabfile.py  nose.cfg  pylintrc  pyproject.toml  recreate-reverse-readfile.py  recreate-reverse-readline.py  requirements-ci.txt  requirements-optional.txt  requirements-travis.txt  setup.cfg  setup.py  tasks.py  test.json
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: lint.yml  release.yml  test.yml
.mypy_cache/3.7/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _compression.data.json  _compression.meta.json  _curses.data.json  _curses.meta.json  _dummy_thread.data.json  _dummy_thread.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _markupbase.data.json  _markupbase.meta.json  _random.data.json  _random.meta.json  _thread.data.json  _thread.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  base64.data.json  base64.meta.json  binascii.data.json  binascii.meta.json  bisect.data.json  bisect.meta.json  builtins.data.json  builtins.meta.json  bz2.data.json  bz2.meta.json  cProfile.data.json  cProfile.meta.json  codecs.data.json  codecs.meta.json  (+104 more)
.mypy_cache/3.7/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.7/ctypes/: __init__.data.json  __init__.meta.json
.mypy_cache/3.7/curses/: __init__.data.json  __init__.meta.json
.mypy_cache/3.7/email/: __init__.data.json  __init__.meta.json  charset.data.json  charset.meta.json  contentmanager.data.json  contentmanager.meta.json  errors.data.json  errors.meta.json  header.data.json  header.meta.json  message.data.json  message.meta.json  policy.data.json  policy.meta.json
.mypy_cache/3.7/html/: __init__.data.json  __init__.meta.json  entities.data.json  entities.meta.json  parser.data.json  parser.meta.json
.mypy_cache/3.7/http/: __init__.data.json  __init__.meta.json  client.data.json  client.meta.json  cookiejar.data.json  cookiejar.meta.json  cookies.data.json  cookies.meta.json  server.data.json  server.meta.json
.mypy_cache/3.7/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.7/json/: __init__.data.json  __init__.meta.json  decoder.data.json  decoder.meta.json  encoder.data.json  encoder.meta.json
.mypy_cache/3.7/logging/: __init__.data.json  __init__.meta.json
.mypy_cache/3.7/monty/: __init__.data.json  __init__.meta.json  bisect.data.json  bisect.meta.json  collections.data.json  collections.meta.json  design_patterns.data.json  design_patterns.meta.json  dev.data.json  dev.meta.json  fnmatch.data.json  fnmatch.meta.json  fractions.data.json  fractions.meta.json  functools.data.json  functools.meta.json  inspect.data.json  inspect.meta.json  io.data.json  io.meta.json  itertools.data.json  itertools.meta.json  json.data.json  json.meta.json  logging.data.json  logging.meta.json  math.data.json  math.meta.json  msgpack.data.json  (+19 more)
benchmark/: benchmark.py  benchmark_monty.py  develop-ubuntu2204.txt  develop-win11.txt  develop_wsl2.txt  pypi-7.12-ubuntu2204.txt  pypi-7.12-win11.txt  pypi_wsl2.txt
docs/: _config.yml  changelog.html  changelog.md  changelog.rst  conf.py  genindex.html  index.html  index.md  index.rst  modules.html  modules.rst  monty.bisect.html  monty.bisect.md  monty.collections.html  monty.collections.md  monty.design_patterns.html  monty.design_patterns.md  monty.dev.html  monty.dev.md  monty.fnmatch.html  monty.fnmatch.md  monty.fractions.html  monty.fractions.md  monty.functools.html  monty.functools.md  monty.html  monty.inspect.html  monty.inspect.md  monty.io.html  monty.io.md  monty.itertools.html  monty.itertools.md  monty.json.html  monty.json.md  monty.logging.html  monty.logging.md  monty.math.html  monty.math.md  monty.md  monty.msgpack.html  (+31 more)
docs/_modules/: index.html
docs/_static/: documentation_options.js
docs/_themes/: README.html
docs_rst/: changelog.rst  conf.py  index.rst  modules.rst  monty.bisect.rst  monty.collections.rst  monty.design_patterns.rst  monty.dev.rst  monty.fnmatch.rst  monty.fractions.rst  monty.functools.rst  monty.inspect.rst  monty.io.rst  monty.itertools.rst  monty.json.rst  monty.logging.rst  monty.math.rst  monty.msgpack.rst  monty.multiprocessing.rst  monty.operator.rst  monty.os.path.rst  monty.os.rst  monty.pprint.rst  monty.re.rst  monty.rst  monty.serialization.rst  monty.shutil.rst  monty.string.rst  monty.subprocess.rst  monty.tempfile.rst  monty.termcolor.rst
docs_rst/_themes/: flask_theme_support.py
monty/: __init__.py  bisect.py  collections.py  design_patterns.py  dev.py  fnmatch.py  fractions.py  functools.py  inspect.py  io.py  itertools.py  json.py  logging.py  math.py  msgpack.py  multiprocessing.py  operator.py  os.py  pprint.py  re.py  serialization.py  shutil.py  string.py  subprocess.py  tempfile.py  termcolor.py
monty/os/: __init__.py  path.py
monty/tests/: __init__.py  test_io.py  test_json.py
src/monty/: __init__.py  bisect.py  collections.py  design_patterns.py  dev.py  fnmatch.py  fractions.py  functools.py  io.py  itertools.py  json.py  logging.py  multiprocessing.py  operator.py  re.py  serialization.py  shutil.py  string.py  subprocess.py  tempfile.py  termcolor.py
tests/: __init__.py  monte_test.mpk  test_bisect.py  test_collections.py  test_design_patterns.py  test_dev.py  test_fnmatch.py  test_fractions.py  test_functools.py  test_inspect.py  test_io.py  test_itertools.py  test_json.py  test_logging.py  test_math.py  test_multiprocessing.py  test_operator.py  test_os.py  test_pprint.py  test_re.py  test_serialization.py  test_shutil.py  test_string.py  test_subprocess.py  test_tempfile.py  test_termcolor.py
tests/test_files/: 3000_lines.txt.bz2  myfile  myfile_bz2.bz2  myfile_lzma.lzma  myfile_txt  myfile_xz.xz  real_lzw_file.txt.Z  settings_for_test.yaml  test_settings.yaml
(+319 files in other folders)
