[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "monty"
maintainers = [
    { name = "Shyue Ping Ong", email = "ongsp@ucsd.edu" },
]
description = "Monty is the missing complement to Python."
readme = "README.md"
requires-python = ">=3.10,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "ruamel.yaml",
  "numpy",
]
version = "2025.1.3"

[project.optional-dependencies]
ci = [
  "coverage",
  "monty[optional]",
  "pytest>=8",
  "pytest-cov>=4",
  "types-requests",
  "pymongo"
]
# dev is for "dev" module, not for development
dev = ["ipython"]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
]
json = [
  "pymongo",
  "orjson>=3.6.1",
  "pandas",
  "pydantic",
  # https://github.com/hgrecco/pint/issues/2065
  "pint; python_version<'3.13'",
  # Note: need torch>=2.3.0 for numpy 2 # 719
  "torch; python_version<'3.13'",  # python 3.13 not supported yet
]
multiprocessing = ["tqdm"]
optional = ["monty[dev,json,multiprocessing,serialization]"]
serialization = ["msgpack"]
task = ["requests", "invoke"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["monty", "monty.*"]

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | tests
  )/
)
'''

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    "@deprecated",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "show_plot",
    "if TYPE_CHECKING:",
    "except ImportError:"
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff.lint]
select = [
  "I",  # isort
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
known-first-party = ["monty"]
